add test sample components and tweak styleguide config

--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
   </head>
 
   <body>
-    <main id="app">{% block content %}{% endblock %}</main>
+    <div id="app">{% block content %}{% endblock %}</div>
     <script src="/client/frontend.bundled.js"></script>
   </body>
 </html>
