hotfix 100% height styleguide

--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
   </head>
 
   <body>
-    <div id="app">{% block content %}{% endblock %}</div>
+    <div id="app" class="wrapper">{% block content %}{% endblock %}</div>
     <script src="/client/frontend.bundled.js"></script>
   </body>
 </html>
