Improved the styleguide look and feel

--- a/app/index.html
+++ b/app/index.html
@@ -33,5 +33,6 @@
     <div id="app" class="wrapper">{% block content %}{% endblock %}</div>
     <script src="/client/frontend.bundled.js"></script>
     <script src="/client/scripts/vendor/svg4everybody.min.js"></script>
+    {% block scripts %}{% endblock %}
   </body>
 </html>
