--- a/app/index.html
+++ b/app/index.html
@@ -31,7 +31,7 @@
 
   <body>
     <div id="app" class="wrapper">{% block content %}{% endblock %}</div>
-    <script src="/client/frontend.bundled.js"></script>
+    <script src="/client/styleguide.bundled.js"></script>
     <script src="/client/scripts/vendor/svg4everybody.min.js"></script>
     {% block scripts %}{% endblock %}
   </body>
