--- a/app/sassdoc/index.html
+++ b/app/sassdoc/index.html
@@ -20,20 +20,20 @@
   font-weight: 700;
   letter-spacing: 0.2px;
 
-  @include media(&#39;≤small&#39;) {
+  @include media(&#39;≤mobile-portrait&#39;) {
     font-size: 18px;
   }
  }" data-collapsed="@mixin type-intro() { ... }"><code>@mixin type-intro() { ... }</code></pre></div><h3 class="item__sub-heading">Description</h3><div class="item__description"><p>This is intended to be an introduction paragraph to an article. It should not be used for more than a single paragraph in a row.</p></div><h3 class="item__sub-heading">Parameters</h3><p>None.</p><h3 class="item__sub-heading">Example</h3><div class="item__example example"><div class="example__description"><p>Introduction paragraph</p></div><pre class="example__code language-markup"><code>&lt;p class=&#39;type-intro&#39;&gt;Vier Tage lang haben drei Schneeschuhwanderer aus Tschechien im Salzburger Pinzgau im Winterraum einer Hütte in 2100 Metern Seehöhe ausgeharrt, weil sie nach einem massiven Wetterumschwung nicht mehr absteigen konnten.&lt;/p&gt;</code></pre></div><h3 class="item__sub-heading">Requires</h3><ul class="list-unstyled"><li class="item__description item__description--inline"><span class="item__cross-type">[variable]</span> <a href="#variable-supporting-font-stack"><code>supporting-font-stack</code></a></li></ul></section><section class="main__item container item" id="mixin-type-copy"><h3 class="item__heading"><a class="item__name" href="#mixin-type-copy">type-copy</a></h3><div class="item__code-wrapper"><pre class="item__code item__code--togglable language-scss" data-current-state="collapsed" data-expanded="@mixin type-copy() { 
   font: 20px / 1.41 $text-font-stack;
   letter-spacing: 0.3px;
 
-  @include media(&#39;≤small&#39;) {
+  @include media(&#39;≤mobile-portrait&#39;) {
     font-size: 18px;
   }
  }" data-collapsed="@mixin type-copy() { ... }"><code>@mixin type-copy() { ... }</code></pre></div><h3 class="item__sub-heading">Description</h3><div class="item__description"><p>This is intended to be the default typographic styles for paragraphs, lists and basically the core content of an article.</p></div><h3 class="item__sub-heading">Parameters</h3><p>None.</p><h3 class="item__sub-heading">Example</h3><div class="item__example example"><div class="example__description"><p>Copy text</p></div><pre class="example__code language-markup"><code>&lt;p class=&#39;type-copy&#39;&gt;Die Männer seien am vergangen Freitagmorgen zu der Tour aufgebrochen, die sie zum Ingolstädterhaus auf 2119 Meter führen sollte, teilte die Polizei mit. Gegen 23.00 Uhr erreichten sie die im Winter nicht bewirtschaftete Hütte und quartierten sich im Winterraum ein, der frei zugänglich ist, über zwölf Schlafplätze, aber keine Verpflegung verfügt.&lt;/p&gt;</code></pre></div><h3 class="item__sub-heading">Requires</h3><ul class="list-unstyled"><li class="item__description item__description--inline"><span class="item__cross-type">[variable]</span> <a href="#variable-text-font-stack"><code>text-font-stack</code></a></li></ul></section><section class="main__item container item" id="mixin-type-copy-alternate"><h3 class="item__heading"><a class="item__name" href="#mixin-type-copy-alternate">type-copy-alternate</a></h3><div class="item__code-wrapper"><pre class="item__code item__code--togglable language-scss" data-current-state="collapsed" data-expanded="@mixin type-copy-alternate() { 
   font: 16px / 1.5 $supporting-font-stack;
 
-  @include media(&#39;≤small&#39;) {
+  @include media(&#39;≤mobile-portrait&#39;) {
     font-size: 15px;
   }
  }" data-collapsed="@mixin type-copy-alternate() { ... }"><code>@mixin type-copy-alternate() { ... }</code></pre></div><h3 class="item__sub-heading">Description</h3><div class="item__description"><p>Alternate copy text.</p></div><h3 class="item__sub-heading">Parameters</h3><p>None.</p><h3 class="item__sub-heading">Example</h3><div class="item__example example"><div class="example__description"><p>Alternate copy text</p></div><pre class="example__code language-markup"><code>&lt;p class=&#39;type-copy-alternate&#39;&gt;Die Redaktion sucht nach Augenzeugen, die am vergangenen Dienstag den Unfall am Marktplatz in Aarau beobachet haben. Ein schwarzer Mercedes war an einen Poller geprallt und hatte sich überschlagen, 2 Passanten wurden leicht verletzt.&lt;/p&gt;</code></pre></div><h3 class="item__sub-heading">Requires</h3><ul class="list-unstyled"><li class="item__description item__description--inline"><span class="item__cross-type">[variable]</span> <a href="#variable-supporting-font-stack"><code>supporting-font-stack</code></a></li></ul><h3 class="item__sub-heading">TODO's</h3><ul class="list-unstyled"><li><p>To be determined.</p></li></ul></section><section class="main__item container item" id="mixin-type-headline-alternate"><h3 class="item__heading"><a class="item__name" href="#mixin-type-headline-alternate">type-headline-alternate</a></h3><div class="item__code-wrapper"><pre class="item__code item__code--togglable language-scss" data-current-state="collapsed" data-expanded="@mixin type-headline-alternate() { 
@@ -43,7 +43,7 @@
   font: 48px / 1.125 $headline-font-stack;
   letter-spacing: 0.9px;
 
-  @include media(&#39;≤small&#39;) {
+  @include media(&#39;≤mobile-portrait&#39;) {
     font-size: 26px;
   }
  }" data-collapsed="@mixin type-h1() { ... }"><code>@mixin type-h1() { ... }</code></pre></div><h3 class="item__sub-heading">Description</h3><div class="item__description"><p>This is intended to be used for the main headline, such as article&#39;s.</p></div><h3 class="item__sub-heading">Parameters</h3><p>None.</p><h3 class="item__sub-heading">Example</h3><div class="item__example example"><div class="example__description"><p>Primary headline</p></div><pre class="example__code language-markup"><code>&lt;h1 class=&#39;type-h1&#39;&gt;Staatsanwaltschaft ermittelt nach Brückeneinsturz gegen Unbekannt&lt;/h1&gt;</code></pre></div><h3 class="item__sub-heading">Requires</h3><ul class="list-unstyled"><li class="item__description item__description--inline"><span class="item__cross-type">[variable]</span> <a href="#variable-headline-font-stack"><code>headline-font-stack</code></a></li></ul></section><section class="main__item container item" id="mixin-type-h2"><h3 class="item__heading"><a class="item__name" href="#mixin-type-h2">type-h2</a></h3><div class="item__code-wrapper"><pre class="item__code item__code--togglable language-scss" data-current-state="collapsed" data-expanded="@mixin type-h2() { 
@@ -51,7 +51,7 @@
   letter-spacing: 0.6px;
   margin-bottom: 15px;
 
-  @include media(&#39;≤small&#39;) {
+  @include media(&#39;≤mobile-portrait&#39;) {
     font-size: 22px;
   }
  }" data-collapsed="@mixin type-h2() { ... }"><code>@mixin type-h2() { ... }</code></pre></div><h3 class="item__sub-heading">Description</h3><div class="item__description"><p>This is intended to be used when <code>type-h1</code> is a bit too <em>in yo&#39; face</em>.</p></div><h3 class="item__sub-heading">Parameters</h3><p>None.</p><h3 class="item__sub-heading">Example</h3><div class="item__example example"><div class="example__description"><p>Secondary headline</p></div><pre class="example__code language-markup"><code>&lt;h2 class=&#39;type-h2&#39;&gt;Staatsanwaltschaft ermittelt nach Brückeneinsturz gegen Unbekannt&lt;/h2&gt;</code></pre></div><h3 class="item__sub-heading">Requires</h3><ul class="list-unstyled"><li class="item__description item__description--inline"><span class="item__cross-type">[variable]</span> <a href="#variable-headline-font-stack"><code>headline-font-stack</code></a></li></ul></section><section class="main__item container item" id="mixin-type-h3"><h3 class="item__heading"><a class="item__name" href="#mixin-type-h3">type-h3</a></h3><div class="item__code-wrapper"><pre class="item__code item__code--togglable language-scss" data-current-state="collapsed" data-expanded="@mixin type-h3() { 
@@ -59,7 +59,7 @@
   letter-spacing: 0.6px;
   margin-bottom: 15px;
 
-  @include media(&#39;≤small&#39;) {
+  @include media(&#39;≤mobile-portrait&#39;) {
     font-size: 18px;
   }
  }" data-collapsed="@mixin type-h3() { ... }"><code>@mixin type-h3() { ... }</code></pre></div><h3 class="item__sub-heading">Description</h3><div class="item__description"><p>This is intended to be used when <code>type-h2</code> is a bit too <em>in yo&#39; face</em>.</p></div><h3 class="item__sub-heading">Parameters</h3><p>None.</p><h3 class="item__sub-heading">Example</h3><div class="item__example example"><div class="example__description"><p>Tertiary headline</p></div><pre class="example__code language-markup"><code>&lt;h3 class=&#39;type-h3&#39;&gt;Staatsanwaltschaft ermittelt nach Brückeneinsturz gegen Unbekannt&lt;/h3&gt;</code></pre></div><h3 class="item__sub-heading">Requires</h3><ul class="list-unstyled"><li class="item__description item__description--inline"><span class="item__cross-type">[variable]</span> <a href="#variable-headline-font-stack"><code>headline-font-stack</code></a></li></ul></section><section class="main__item container item" id="mixin-type-h4"><h3 class="item__heading"><a class="item__name" href="#mixin-type-h4">type-h4</a></h3><div class="item__code-wrapper"><pre class="item__code item__code--togglable language-scss" data-current-state="collapsed" data-expanded="@mixin type-h4() { 
