Styleguide: removing body padding

--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
     {% block head %}{% endblock %}
   </head>
 
-  <body>
+  <body class="styleguide-body">
     <div id="app" class="wrapper">{% block content %}{% endblock %}</div>
     <script src="/client/styleguide.bundled.js"></script>
     {% block scripts %}{% endblock %}
