LatestArticles: Add method for trimming data based on viewport on load

--- a/app/index.html
+++ b/app/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de-ch" class="no-touch">
+<html lang="de-ch">
   <head>
     <meta charset="UTF-8" />
     <title>{% block title %}{{ title | default('AZ') }}{% endblock %}</title>
