standardized net metrix page view tracking for styleguide and website

--- a/app/index.html
+++ b/app/index.html
@@ -11,33 +11,9 @@
       {% include "client/scripts/webfont-loading.js" %}
     </script>
 
-    {# Tracking has to be loaded synchronously here. #}
+    {# Track on loading of page. #}
     <script src="/client/tracking.bundled.js"></script>
-    <script>
-      if (typeof window.AZTracker !== 'undefined' && window.AZTracker.trackPageView) {
-        window.AZTracker.trackPageView({
-          domain: 'aznetz',
-          path: {
-            product: 'live',
-
-            // exclude as it is already contained in url path
-            // sitename: 'styleguide',
-
-            // component name event tracking, "page" or "empty" for pageview tracking
-            // @TODO: adjust in concept
-            // view: 'page',
-
-            path: window.location.pathname,
-            event: 'pageview',
-            id: null,
-            index: null
-          },
-          referer: document.referer,
-          screenWidth: screen.width,
-          screenHeight: screen.height
-        });
-      }
-    </script>
+    <script src="/client/scripts/tracking/netmetrix.js"></script>
 
     {# Asynchronously request the font-face stylesheet based on the WOFF support,
        then store it in localStorage for future visits. #}
