--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
     <script src="/client/tracking.bundled.js"></script>
     <script src="/client/scripts/tracking/netmetrix.js"></script>
     <noscript id="trackingNoScript">
-      <!-- @TODO: request tag in img -->
+      <!-- @TODO: request tag in <img src=""...>: Use NetMetrixTracker._getTag() server-side. (see routingNodeIncludes.js for definition of nunjucks variables) -->
     </noscript>
 
     {# Asynchronously request the font-face stylesheet based on the WOFF support,
