refactored hosts to use without_wemf flag for pageview tracking

--- a/app/index.html
+++ b/app/index.html
@@ -37,21 +37,24 @@
     {# Track NetMetrix. #}
     <script>
       if (typeof window.AZTracker !== 'undefined' && window.AZTracker.trackPageView) {
-        window.AZTracker.trackPageView({
-          domain: 'aznetz',
-          path: {
-            product: 'live',
-            sitename: 'styleguide',
-            view: 'page',
-            path: window.location.pathname,
-            event: 'pageview',
-            id: null,
-            index: null
-          },
-          referer: document.referer,
-          screenWidth: screen.width,
-          screenHeight: screen.height
-        });
+        // @TODO: make configurable in .env file?
+        if (true) {
+          window.AZTracker.trackPageView({
+            domain: 'aznetz',
+            path: {
+              product: 'live',
+              sitename: 'styleguide',
+              view: 'page',
+              path: window.location.pathname,
+              event: 'pageview',
+              id: null,
+              index: null
+            },
+            referer: document.referer,
+            screenWidth: screen.width,
+            screenHeight: screen.height
+          });
+        }
       }
     </script>
 
